--- a/legacy.tex
+++ b/legacy.tex
@@ -293,7 +293,8 @@ Using the Michigan Imputation Server, we imputed the genotype data from 1kGP
 \section{Acknowledgments}
 We would like to thank Kelly Harris for sharing her mutation spectrum pipelines.
  
-\bibliography{/Users/luke/Dropbox/Work/PHD/BibTeX/Legacy.bib}
+ 
+\bibliography{Legacy.bib}
 
 \end{document}
 			
